# _marble

./: AGENTS.md  ARCHITECTURE.md  CHANGELOG  DOTHISFIRST.md  FAILEDPATCHES.md  MAETOK_PLAN.txt  README.md  clone_or_update.ps1  clone_or_update.sh  config.yaml  count_numeric_parameters.py  eval.md  find_tests_without_prints.py  improvementdevelopmentplan.md  learnables.yaml  maetok.txt  marblemain_snapshot.txt  mtmp.txt  pyproject.toml  run_tests.py  wanderer_block.txt  wanderer_steps.jsonl  yaml-manual.txt
.venv_cli/: pyvenv.cfg
3d_printer_sim/: TUTORIAL.md  config.py  config.yaml  developmentplan.md  extruder.py  marlin.py  marlin_analysis.md  marlin_config_parser.py  microcontroller.py  sdcard.py  sensors.py  simulation.py  stepper.py  thermal.py  usb.py  visualization.py  yaml-manual.txt
docs/: plugin_catalog.md
examples/: Untitled.ipynb  Untitled1.ipynb  __init__.py  run_datapair_training.py  run_gui.py  run_hf_image_quality.py  run_hf_image_quality_dc.py  run_hf_image_quality_neuroplasticity.py  run_hf_image_quality_noplugins.py  run_paradigms_stacking.py  run_plugins_demo.py  run_text_prediction.py  run_text_to_image.py  run_wine_hello.py  run_wine_with_selfattention.py  utils.py
marble/: __init__.py  action_sampler.py  auto_param.py  bayesian_policy.py  buildingblock.py  codec.py  constraints.py  dashboard.py  datapair.py  decision_controller.py  graph.py  hf_utils.py  history_encoder.py  learnable_param.py  learnables_yaml.py  lobe.py  marblemain.py  offpolicy.py  plugin_cost_profiler.py  reporter.py  (+11 more)
marble.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+351 files in other folders)
